# ml-algorithms

./: main.py  pyproject.toml
linreg/: linreg.py
logreg/: logreg.py  logreg_testing.ipynb
nonlin/: nonlin_testing.ipynb
