[project]
name = "ml-algorithms"
version = "0.1.0"
description = "Some algorithms and some discussion"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipympl>=0.10.0",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pip>=26.1.2",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.47",
]
